--- a/.github/workflows/newjoke.yml
+++ b/.github/workflows/newjoke.yml
@@ -23,14 +23,15 @@ jobs:
         uses: actions/checkout@v2.3.2
 
       - name: Modifiy the specific files using scripts
-        run: |
-          --- shell scripts or command lines to execute ---
+        run: |          
+          bash dailydadjoke.sh
+
 # If you execute some shell scripts or command lines to modify
 # the files, use the 'run' key.
 # More details, see "https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepsrun"
 
       - name: Modifiy the specific files using action
-        uses: action-owner/action-repo@ref
+        # uses: action-owner/action-repo@ref
 # If you execute an action to modify the files, use the 'uses' key.
 # Just like as the previous step that executes the checkout action.
 # More details, see "https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepsuses"
@@ -39,8 +40,6 @@ jobs:
         run: |
           git config --global user.name "blaize"
           git config --global user.email "me@blaize.net"
-
-          bash dailydadjoke.sh
 
           git add -A
           git commit -m "New Daily Joke"
