--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Twitter
 
 # Controls when the workflow will run
 on:
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   job1:
-    name: Modifiy repository files
+    name: Post something to Twitter
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
