--- a/.github/workflows/newjoke.yml
+++ b/.github/workflows/newjoke.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Update Website
 
 # Controls when the workflow will run
 on:
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2.3.2
 
-      - name: Modifiy the specific files using scripts
+      - name: Update the joke history JS file
         run: |          
           bash dailydadjoke.sh
 
