--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -26,4 +26,4 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
         run: |          
-          bash twitter.sh
+          npm install twitter && node twitter.js
